--- a/css/styles.css
+++ b/css/styles.css
@@ -60,9 +60,9 @@ body {
   height: 100%;
 }
 
-.gallery__link:hover {
+/* .gallery__link:hover {
   cursor: zoom-in;
-}
+} */
 
 /* Lightbox */
 .lightbox {
